--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -238,7 +238,7 @@
                         <i class="fa fa-comments fa-fw"></i>
                         Project Chat
                     </div>
-                    <div class="list-group-item panel-body" cg-busy="promise" style="max-height: 300px;">
+                    <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 300px;">
                         <div ng-if="(posts == null) || (posts.length == 0)" class="center-block vertical-center">
                             <h3 class="text-info text-center">Post will be displayed here</h3>
                         </div>
