--- a/web/bundles/zectranet/css/style.css
+++ b/web/bundles/zectranet/css/style.css
@@ -324,3 +324,11 @@
     border: 4px solid #495b79;
     border-radius: 5%;
 }
+
+.coments:hover{
+    background-color: #f8f8f8;
+    cursor: pointer;
+    -webkit-box-shadow: 4px 4px 12px 0px rgba(50, 50, 50, 0.34);
+    -moz-box-shadow:    4px 4px 12px 0px rgba(50, 50, 50, 0.34);
+    box-shadow:         4px 4px 12px 0px rgba(50, 50, 50, 0.34);
+}
