--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -157,7 +157,7 @@
             <i class="fa fa-comments fa-fw"></i>
             Office Chat
         </div>
-        <div class="list-group-item panel-body" style="max-height: 300px;">
+        <div id="posts-panel" class="list-group-item panel-body" style="max-height: 300px;">
             {% if office.postsOffice | length == 0 %}
                 <h4 class="text-info text-center vertical-center">Posts will be displayed here</h4>
             {% endif %}
