--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -429,27 +429,27 @@
 			<div class="row">
 				<div class="col-xs-12">
 
-                    {% if app.user.notifications | length > 0 %}
-                        <div ng-if="notifications.length > 0">
-                            <div ng-repeat="notification in notifications | limitTo: 1">
-                                <div class="panel panel-info request" ng-if="(notification.type == 'request_user_project')">
-                                    <div class="panel-body">
-                                        <div ng-bind-html="[[notification.message]]" style="word-wrap: break-word; font-size: 1.2em; color: #0986a3;"></div>
-                                        <div class="text-right" style="margin-top: 10px; padding-top: 20px; border-top: 1px solid #ccc;">
-                                            <div ng-click="acceptRequestUserProject()" class="btn btn-primary" style="margin-right: 20px;">Accept</div>
-                                            <div class="btn btn-default">Decline</div>
-                                        </div>
+                    <div ng-if="requests.length > 0">
+                        <div ng-repeat="request in requests | limitTo: 1">
+                            <div class="panel panel-info request" ng-if="(request.type.label == 'request_user_project')">
+                                <div class="panel-body">
+                                    <div style="word-wrap: break-word; font-size: 1.2em; color: #0986a3;">
+                                        You have a new request in "[[request.project.name]]"
                                     </div>
-                                    <div class="panel-footer text-center">
-                                        <a href="#" class="seeAllRequest">
-                                            <strong>See All Requests</strong>
-                                            <i class="fa fa-angle-right"></i>
-                                        </a>
+                                    <div class="text-right" style="margin-top: 10px; padding-top: 20px; border-top: 1px solid #ccc;">
+                                        <div ng-click="acceptRequestUserProject(request.project.id)" class="btn btn-primary" style="margin-right: 20px;">Accept</div>
+                                        <div ng-click="declineRequestUserProject(request.project.id)" class="btn btn-default">Decline</div>
                                     </div>
+                                </div>
+                                <div class="panel-footer text-center">
+                                    <a href="#" class="seeAllRequest">
+                                        <strong>See All Requests</strong>
+                                        <i class="fa fa-angle-right"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
+                    </div>
 
 					{% block body %}
 					{% endblock %}
@@ -502,7 +502,8 @@
 			notificationsGet: "{{ url('zectranet_notifications_get') }}",
             officeShow: "{{ url('zectranet_show_office', {office_id: 0}) }}",
 			projectShow: "{{ url('zectranet_show_project', {project_id: 0}) }}",
-            {#//acceptRequestUserProject : "{{ url('zectranet_accept_request_user_project', { 'project_id': 0 }) }}",#}
+            acceptRequestUserProject : "{{ url('zectranet_accept_request_user_project', { 'project_id': 0 }) }}",
+            declineRequestUserProject : "{{ url('zectranet_decline_request_user_project', { 'project_id': 0 }) }}",
             taskShow: "{{ url('zectranet_task_show', {task_id: 0}) }}",
 			documentTemplate: "{{ asset('bundles/zectranet/templates/document.html') }}",
             {#checkUserByUsername: "{{ url('intranet_user_check_username') }}",
