--- a/web/bundles/zectranet/css/style.css
+++ b/web/bundles/zectranet/css/style.css
@@ -287,9 +287,30 @@
     width: 500px !important;
 }
 
+.request{
+    width: 60%;
+    margin: 20px auto;
+    box-shadow: 3px 3px 10px #ccc;
+}
+
+.seeAllRequest{
+    width: 100%;
+    text-decoration: none !important;
+    display: inline-block;
+    padding: 5px 0;
+}
+
+.seeAllRequest:hover{
+    background-color: #ccc;
+}
+
 @media screen and (max-width: 500px){
     .notifier{
         width: 300px !important;
+    }
+
+    .request{
+        width: 100%;
     }
 }
 
