--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -53,7 +53,7 @@
                         <i class="fa fa-briefcase"></i>
                         {{ project.name }}
                     </a>
-                    <div class="list-group-item active">Project Description:</div>
+                    <div class="list-group-item active">Project Description</div>
                     <div class="list-group-item">{{ project.description }}</div>
                 </div>
             </div>
