--- a/src/ZectranetBundle/Resources/views/filter.html.twig
+++ b/src/ZectranetBundle/Resources/views/filter.html.twig
@@ -1,6 +1,6 @@
 <div class="list-group-item active">
     <i class="fa fa-tasks"></i>
-    <span>Filter:</span>
+    <span>Filter</span>
 </div>
 <div class="panel-body">
     <div class="col-md-12">
