--- a/web/bundles/zectranet/templates/chat.html
+++ b/web/bundles/zectranet/templates/chat.html
@@ -1,5 +1,5 @@
 <ul class="chat">
-    <li highlight ng-repeat="post in posts" class="clearfix" ng-class="{'right': USER_ID == post.user.id, 'left': USER_ID != post.user.id }">
+    <li highlight ng-repeat="post in posts" style="border-bottom: none;" class="clearfix" ng-class="{'right': USER_ID == post.user.id, 'left': USER_ID != post.user.id }">
         <span class="chat-img"
               ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }"
               ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
@@ -14,7 +14,7 @@
 
                 <small class="text-muted" ng-class="{'pull-left': USER_ID == post.user.id, 'pull-right': USER_ID != post.user.id }">
                     <i class="fa fa-clock-o fa-fw"></i>
-                    Posted on [[post.posted]]
+                    Posted on <span style="color: #000000; font-style: italic">[[post.posted]]</span>
                     <i ng-if="post.edited" class="fa fa-edit"></i>
                 </small>
             </div>
