--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -265,7 +265,7 @@
 	<script src="{{ asset('bundles/zectranet/js/highlight.js') }}" type="text/javascript"></script>
 	<script>
 		// Variable for AngularJS
-		var USER_ID = {{ app.user.id }};
+		TEMPPARAMS.USER_ID = {{ app.user.id }};
 	</script>
 {% endblock %}
 
