--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -338,7 +338,7 @@
         JSON_URLS.deleteFile  = "{{ path('zectranet_document_delete', { fileid : 0 }) }}";
         JSON_URLS.renameFile  = "{{ path('zectranet_document_rename', { fileid : 0 }) }}";
         JSON_URLS.InsertScreenshotsInPHP = "{{ path('zectranet_InsertScreenshotsInPHP') }}";
-        var NOW = '{{ "now" | date('Y-m-d') }}';
+        TEMPPARAMS.NOW = '{{ "now" | date('Y-m-d') }}';
 
         $('.noclose').bind('click', function (e) {
             e.stopPropagation();
